--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,8 @@
 [phases.setup]
-nixPkgs = ['php82', 'php82Packages.composer', 'nodejs']
-
-[phases.install]
-cmds = ['composer install --frozen-lockfile']
+nixPkgs = ['php82', 'php82Packages.composer', 'nodejs', 'libatomic_ops']
 
 [phases.build]
-cmds = ['npm install && npm run build', 'php artisan optimize']
+cmds = ['composer install --no-dev', 'npm install && npm run build']
 
 [start]
 cmd = 'vendor/bin/heroku-php-apache2 public/'
