--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+    "$schema": "./composer.schema.json",
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
