--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,19 @@
 [phases.setup]
-nixPkgs = ['php82', 'php82Packages.composer', 'nodejs', 'libatomic_ops']
+nixPkgs = ['php82', 'php82Packages.composer', 'nodejs_20']
+
+[phases.install]
+cmds = [
+    'composer install --no-dev --optimize-autoloader --no-interaction',
+    'npm ci'
+]
 
 [phases.build]
-cmds = ['composer install --no-dev', 'npm install && npm run build']
+cmds = [
+    'npm run build',
+    'php artisan config:cache',
+    'php artisan route:cache',
+    'php artisan view:cache'
+]
 
 [start]
-cmd = 'vendor/bin/heroku-php-apache2 public/'
+cmd = 'php artisan serve --host=0.0.0.0 --port=$PORT'
