--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,15 +1,11 @@
 [phases.setup]
-nixPkgs = ['php82', 'php82Packages.composer', 'nodejs_20']
+nixPkgs = ['php82', 'php82Packages.composer']
 
 [phases.install]
-cmds = [
-    'composer install --no-dev --optimize-autoloader --no-interaction',
-    'npm ci'
-]
+cmds = ['composer install --no-dev --optimize-autoloader']
 
 [phases.build]
 cmds = [
-    'npm run build',
     'php artisan config:cache',
     'php artisan route:cache',
     'php artisan view:cache'
@@ -17,3 +13,8 @@ cmds = [
 
 [start]
 cmd = 'php artisan serve --host=0.0.0.0 --port=$PORT'
+```
+
+**মনে রাখবেন:** এই line টা remove করুন যদি কোথাও থাকে:
+```
+cmd = 'vendor/bin/heroku-php-apache2 public/'
